business finance template arrange

--- a/business_finance/about.html
+++ b/business_finance/about.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="description" content="" />
-    <meta name="author" content="TemplateMo" />
+    <meta name="author" content="SmartGenz" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
       rel="stylesheet"
@@ -24,9 +24,9 @@
     <link rel="stylesheet" href="assets/css/owl.css" />
     <!--
 
-Finance Business TemplateMo
+Finance Business Smartgenz Template
 
-https://templatemo.com/tm-545-finance-business
+https://smartgenz.com/ 
 
 -->
   </head>
@@ -133,7 +133,9 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-12">
             <h1>会社概要</h1>
             <span
-              >私たち、ファイナンスビジネスは20年の業績・実績があります。</span
+              >私たちファイナンス事業は、20年にわたる経験と実績があり、グローバルな業界内で高い評価を得ています。
+              私たちは、グローバルな財政投資家との数多くのコネクションを確立し、企業の資金調達ストラクチャーの運用において
+              大きな経験を積んできました。</span
             >
           </div>
         </div>
@@ -148,7 +150,7 @@ https://templatemo.com/tm-545-finance-business
               <div class="row">
                 <div class="col-md-6 align-self-center">
                   <div class="right-content">
-                    <span>私たちの会社は</span>
+                    <span>私たちの会社は？</span>
                     <h2>私たちの<em>会社概要</em></h2>
                     <p>
                       急速かつ複雑な進化を続けるファイナンスビジネス。
@@ -161,7 +163,6 @@ https://templatemo.com/tm-545-finance-business
                       サポートさせていただきます。
                       そしてデジタル通貨の簡単な導入方法もできるサービスがあります。
                     </p>
-                    <a href="" class="filled-button">MORE</a>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -462,10 +463,10 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-12">
             <p>
-              Copyright &copy; 2020 Financial Business Co., Ltd. - Design:
+              Copyright &copy; 2023 Smartgenz - Design:
               <a
                 rel="nofollow noopener"
-                href="https://templatemo.com"
+                href="https://smartgenz.com/"
                 target="_blank"
                 >TemplateMo</a
               >
