--- a/business_finance/contact.html
+++ b/business_finance/contact.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="description" content="" />
-    <meta name="author" content="TemplateMo" />
+    <meta name="author" content="SmartGenz" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
       rel="stylesheet"
@@ -24,9 +24,9 @@
     <link rel="stylesheet" href="assets/css/owl.css" />
     <!--
 
-Finance Business TemplateMo
+Finance Business Smartgenz Template
 
-https://templatemo.com/tm-545-finance-business
+https://smartgenz.com/ 
 
 -->
   </head>
@@ -132,7 +132,8 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-12">
             <h1>お問い合わせ</h1>
-            <span>自由に企業についてコメントしてください！</span>
+            <span>何か問題がありましたら、お気軽にご連絡ください。できるだけ早くお返事を差し上げ、
+              <br>お客様のジレンマを解消するお手伝いをさせていただきます。</span>
           </div>
         </div>
       </div>
@@ -396,12 +397,12 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-12">
             <p>
-              Copyright &copy; 2020 Financial Business Co., Ltd. - Design:
+              Copyright Smartgenz - Design:
               <a
                 rel="nofollow noopener"
-                href="https://templatemo.com"
+                href="https://smartgenz.com/"
                 target="_blank"
-                >TemplateMo</a
+                >Smartgenz</a
               >
             </p>
           </div>
