--- a/business_finance/index.html
+++ b/business_finance/index.html
@@ -7,13 +7,13 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="description" content="" />
-    <meta name="author" content="TemplateMo" />
+    <meta name="author" content="SmartGenz" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
       rel="stylesheet"
     />
 
-    <title>Finance Business HTML5 Template</title>
+    <title>ファイナンスビジネス | SmartGenz</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -24,9 +24,9 @@
     <link rel="stylesheet" href="assets/css/owl.css" />
     <!--
 
-Finance Business TemplateMo
+Finance Business Smartgenz Template
 
-https://templatemo.com/tm-545-finance-business
+https://smartgenz.com/ 
 
 -->
   </head>
@@ -118,7 +118,7 @@ https://templatemo.com/tm-545-finance-business
                 <a class="nav-link" href="contact.html">お問い合わせ</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="one-page.html">英語版</a>
+                <a class="nav-link" href="one-page.html">English</a>
               </li>
             </ul>
           </div>
@@ -134,13 +134,12 @@ https://templatemo.com/tm-545-finance-business
         <div class="item item-1">
           <div class="img-fill">
             <div class="text-content">
-              <h6>あなたを最後までサポート</h6>
+              <h6>御社・貴社を最後までサポート</h6>
               <h4>財務の分析・業績&<br />コンサルティング業務</h4>
               <p>
                 専門性の高さと専門知識・情報を活用しクライアントにメリットのある情報を提供。
                 企業の経営状況を分析、自社の財務状況をお客様に寄り添い問題点を見つけて経営上
                 に助けになる情報を見つて今後の発展性も予測し提供します。
-                <a href="one-page.html">コンサルティング</a>2023 january.
               </p>
               <a href="contact.html" class="filled-button">お問い合せ</a>
             </div>
@@ -151,7 +150,7 @@ https://templatemo.com/tm-545-finance-business
         <div class="item item-2">
           <div class="img-fill">
             <div class="text-content">
-              <h6>あなたを最後までサポート</h6>
+              <h6>最後まで徹底的にサポートします</h6>
               <h4>経理&マネジメント</h4>
               <p>
                 具体的な情報を数値化し資料にまとめお客様に提供をいたします。<br />
@@ -174,7 +173,7 @@ https://templatemo.com/tm-545-finance-business
                 市場動向や顧客ニーズ・市場の成長率を分析。情報をしっかりと整理しお客様にわかりやす情報を丁寧に説明します。
                 また無駄な時間・コストがかからないようサポートします。
               </p>
-              <a href="about.html" class="filled-button">MORE</a>
+              <a href="about.html" class="filled-button">詳しくはこちら</a>
             </div>
           </div>
         </div>
@@ -215,7 +214,7 @@ https://templatemo.com/tm-545-finance-business
                   私たちはデジタル通貨を活用し手間でコストを省けるられる
                   便利でかつ利用が簡単。様々なメリット紹介して行きます。
                 </p>
-                <a href="" class="filled-button">MORE</a>
+                <a href="" class="filled-button">詳しくはこちら</a>
               </div>
             </div>
           </div>
@@ -228,7 +227,7 @@ https://templatemo.com/tm-545-finance-business
                   市場動向や顧客ニーズ・市場の成長率を分析。情報をしっかりと
                   整理しお客様にわかりやす情報を丁寧に説明します。
                 </p>
-                <a href="" class="filled-button">MORE</a>
+                <a href="" class="filled-button">詳しくはこちら</a>
               </div>
             </div>
           </div>
@@ -241,7 +240,7 @@ https://templatemo.com/tm-545-finance-business
                   常に発展性を予測し今後の活躍にも活かしています。
                   要望をとらえた提案力によりクライアントから評価を受けています。
                 </p>
-                <a href="" class="filled-button">MORE</a>
+                <a href="" class="filled-button">詳しくはこちら</a>
               </div>
             </div>
           </div>
@@ -263,7 +262,7 @@ https://templatemo.com/tm-545-finance-business
                 <br /><br />お客様の声を取り込みながらも開発を続けることで、新しい価値を創造することができる。
                 それを計画的に当社の専門知識・技術を提供します。
 
-                <a href="" class="filled-button">MORE</a>
+                <a href="" class="filled-button">詳しくはこちら</a>
               </p>
             </div>
           </div>
@@ -323,7 +322,7 @@ https://templatemo.com/tm-545-finance-business
                       財務の分析・コンサルテイングの業務をサポートさせていただきます。
                       そしてデジタル通貨の簡単な導入方法もできるサービスがあります。
                     </p>
-                    <a href="#" class="filled-button">MORE</a>
+                    <a href="#" class="filled-button">詳しくはこちら</a>
                   </div>
                 </div>
               </div>
@@ -626,12 +625,12 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-12">
             <p>
-              Copyright &copy; 2020 Financial Business Co., Ltd. - Design:
+              Copyright Smartgenz - Design:
               <a
                 rel="nofollow noopener"
-                href="https://templatemo.com"
+                href="https://smartgenz.com/"
                 target="_blank"
-                >TemplateMo</a
+                >Smartgenz</a
               >
             </p>
           </div>
