--- a/business_finance/services.html
+++ b/business_finance/services.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="description" content="" />
-    <meta name="author" content="TemplateMo" />
+    <meta name="author" content="SmartGenz" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap"
       rel="stylesheet"
@@ -24,9 +24,9 @@
     <link rel="stylesheet" href="assets/css/owl.css" />
     <!--
 
-Finance Business TemplateMo
+Finance Business Smartgenz Template
 
-https://templatemo.com/tm-545-finance-business
+https://smartgenz.com/ 
 
 -->
   </head>
@@ -133,8 +133,8 @@ https://templatemo.com/tm-545-finance-business
           <div class="col-md-12">
             <h1>事業内容</h1>
             <span
-              >私たち、ファイナンスビジネスは20年の業績・実績があります。</span
-            >
+              >長年にわたり、数多くのサクセスストーリーを生み出してきた私たちは、あらゆる取り組みにおいて信頼できるパートナーとなっています。
+              私たちのサービスは、世界的なコングロマリットや中小企業、有望な新興企業などに、事業開始当初から利用されてきました。</span>
           </div>
         </div>
       </div>
@@ -437,12 +437,12 @@ https://templatemo.com/tm-545-finance-business
         <div class="row">
           <div class="col-md-12">
             <p>
-              Copyright &copy; 2020 Financial Business Co., Ltd. - Design:
+              Copyright Smartgenz - Design:
               <a
                 rel="nofollow noopener"
-                href="https://templatemo.com"
+                href="https://smartgenz.com/"
                 target="_blank"
-                >TemplateMo</a
+                >Smartgenz</a
               >
             </p>
           </div>
