--- a/daymy/index.html
+++ b/daymy/index.html
@@ -30,7 +30,7 @@
 
 TemplateMo 582 Tale SEO Agency
 
-https://templatemo.com/tm-582-tale-seo-agency
+https://smartgenz.com//tm-582-tale-seo-agency
 
 -->
   </head>
@@ -498,7 +498,7 @@ https://templatemo.com/tm-582-tale-seo-agency
             reserved.
 
             <br />Design:
-            <a href="https://templatemo.com" target="_blank">TemplateMo</a>
+            <a href="https://smartgenz.com/" target="_blank">TemplateMo</a>
           </p>
         </div>
       </div>
