--- a/nix/index.html
+++ b/nix/index.html
@@ -28,7 +28,7 @@
 
 TemplateMo 565 Onix Digital
 
-https://templatemo.com/tm-565-onix-digital
+https://smartgenz.com//tm-565-onix-digital
 
 -->
   </head>
@@ -372,7 +372,7 @@ https://templatemo.com/tm-565-onix-digital
                     <div class="inner-content">
                       <a
                         rel="sponsored"
-                        href="https://templatemo.com/tm-564-plot-listing"
+                        href="https://smartgenz.com//tm-564-plot-listing"
                         target="_parent"
                         ><h4>プロジェクトⅠ</h4></a
                       >
@@ -399,7 +399,7 @@ https://templatemo.com/tm-565-onix-digital
                     <div class="inner-content">
                       <a
                         rel="sponsored"
-                        href="https://templatemo.com/tm-562-space-dynamic"
+                        href="https://smartgenz.com//tm-562-space-dynamic"
                         target="_parent"
                         ><h4>プロジェクトⅢ</h4></a
                       >
@@ -949,7 +949,7 @@ https://templatemo.com/tm-565-onix-digital
                 Designed by
                 <a
                   rel="nofollow"
-                  href="https://templatemo.com"
+                  href="https://smartgenz.com/"
                   title="free CSS templates"
                   >TemplateMo</a
                 >
