--- a/daymy/about.html
+++ b/daymy/about.html
@@ -28,7 +28,7 @@
     />
     <!--
 
-TemplateMo 582 Tale SEO Agency
+SmartGenz Template
 
 https://smartgenz.com//tm-582-tale-seo-agency
 
@@ -139,13 +139,11 @@ https://smartgenz.com//tm-582-tale-seo-agency
               <div class="line-dec"></div>
               <h4><em>私たちについて</em></h4>
               <p>
-                ティルはBootstrap v5.2.2
-                CSSを使用した、あなたの会社に最適なSEO代理店WEBサイトです。
-                検索上位サイトと比較分析できる！そして自社に何が足りないのかどうすれば競合と違う
-                SEO対策ができるのかを簡単に方法ができるのがティルです。
+                私たちは、日本のデジタル市場のリーディングカンパニーとして、データ解析とテクノロジーを駆使した先進的なマーケティングプランの策定、
+                それを支えるIT基盤の構築、そしてお客様のビジネスの創発を支援するDX（Digital Transformation）アドバイスを専門としています。
+                国内外企業との緊密な連携により、技術的なノウハウとプロセス全体を統括する能力を駆使して、お客様の成功に貢献します。
               </p>
-              <div class="main-button"><a href="#">MORE</a></div>
-              <span>or</span>
+              <div class="main-button"><a href="#">詳しくはこちら</a></div>
               <div class="second-button"><a href="#">Q&A</a></div>
             </div>
           </div>
@@ -386,7 +384,7 @@ https://smartgenz.com//tm-582-tale-seo-agency
       <div class="container">
         <div class="col-lg-12">
           <p>
-            Copyright © 2036 <a href="#">DAYmy SEO Agency</a>. All rights
+            Copyright © 2023 <a href="https://smartgenz.com/">SmartGenz</a>. All rights
             reserved.
 
             <br />Design:
