--- a/daymy/faqs.html
+++ b/daymy/faqs.html
@@ -28,7 +28,7 @@
     />
     <!--
 
-TemplateMo 582 Tale SEO Agency
+SmartGenz Template
 
 https://smartgenz.com//tm-582-tale-seo-agency
 
@@ -407,7 +407,7 @@ https://smartgenz.com//tm-582-tale-seo-agency
       <div class="container">
         <div class="col-lg-12">
           <p>
-            Copyright © 2036 <a href="#">DAYmy SEO Agency</a>. All rights
+            Copyright © 2023 <a href="https://smartgenz.com/">SmartGenz</a>. All rights
             reserved.
 
             <br />Design:
