--- a/daymy/index.html
+++ b/daymy/index.html
@@ -28,7 +28,7 @@
     />
     <!--
 
-TemplateMo 582 Tale SEO Agency
+SmartGenz Template
 
 https://smartgenz.com//tm-582-tale-seo-agency
 
@@ -147,22 +147,19 @@ https://smartgenz.com//tm-582-tale-seo-agency
         <div class="row">
           <div class="col-lg-7">
             <div class="caption header-text">
-              <h6>SEOエージェンシー</h6>
+              <h6>DAYMY（ディミー）</h6>
               <div class="line-dec"></div>
-              <h4>SEO<em>の世界に</em> 飛び込もう <span>ティルで！</span></h4>
+              <h4>SEO<em>の世界に</em> 飛び込もう<span>ティルで！</span></h4>
               <p>
-                ディミーはBootstrap v5.2.2
-                CSSを使用した、あなたの会社に最適なSEO代理店WEBサイトです。
-                検索上位サイトと比較分析できる！そして自社に何が足りないのかどうすれば競合と違う
-                SEO対策ができるのかを簡単に方法ができるのがティルです。
+                DAYMY（ディミー）では、企業と顧客との接点となるすべてのデジタル領域が連携して成功することが重要であると考えています。
+                そのために、デジタル広告、ソーシャルメディア、オウンドメディア、コマースメディア、パーソナルチャネルなど、各領域のプロフェッショナルが連携し、声を合わせ、データを活用しながら、優れた顧客体験を提供し、企業の売上と投資対効果を高めています。
                 <a href="index.html">ホーム</a>,
                 <a href="about.html">会社概要</a>,
                 <a href="faqs.html">質問</a>.
               </p>
               <div class="main-button scroll-to-section">
-                <a href="#services">MORE</a>
+                <a href="#services">サービス</a>
               </div>
-              <span>or</span>
               <div class="second-button">
                 <a href="faqs.html">Q&A</a>
               </div>
@@ -367,7 +364,7 @@ https://smartgenz.com//tm-582-tale-seo-agency
                 <div class="col-lg-4">
                   <div id="map">
                     <iframe
-                      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12469.776493332698!2d-80.14036379941481!3d25.907788681148624!2m3!1f357.26927939317244!2f20.870722720054623!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x88d9add4b4ac788f%3A0xe77469d09480fcdb!2sSunny%20Isles%20Beach!5e1!3m2!1sen!2sth!4v1642869952544!5m2!1sen!2sth"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d207614.2141447282!2d140.02128335896495!3d35.60375488982535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60229ac1c8eec4df%3A0x689c0bdcac1d91e6!2z5Y2D6JGJ55yM5Y2D6JGJ5biC!5e0!3m2!1sja!2sjp!4v1675503150111!5m2!1sja!2sjp"
                       width="100%"
                       height="670px"
                       frameborder="0"
@@ -460,7 +457,7 @@ https://smartgenz.com//tm-582-tale-seo-agency
                       <div class="col-lg-4">
                         <div class="info-item">
                           <i class="fa fa-phone"></i>
-                          <h4><a href="#">010-020-0340</a></h4>
+                          <h4><a href="#">043-356-0300</a></h4>
                         </div>
                       </div>
                       <div class="col-lg-4">
@@ -494,11 +491,11 @@ https://smartgenz.com//tm-582-tale-seo-agency
       <div class="container">
         <div class="col-lg-12">
           <p>
-            Copyright © 2036 <a href="#">DAYmy SEO Agency</a>. All rights
+            Copyright © 2023 <a href="https://smartgenz.com/">SmartGenz</a>. All rights
             reserved.
 
             <br />Design:
-            <a href="https://smartgenz.com/" target="_blank">TemplateMo</a>
+            <a href="https://smartgenz.com/" target="_blank">SmartGenz</a>
           </p>
         </div>
       </div>
