--- a/neru/index.html
+++ b/neru/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
     <!-- site metas -->
-    <title>milina</title>
+    <title>neru（ネル）</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
@@ -143,7 +143,7 @@
                   </div>
                   <div class="col-md-6">
                     <span>01/03</span>
-                    <h1>Milina ネイルサロンビューティー</h1>
+                    <h1>Neruネイルサロンビューティー</h1>
                     <p>あなただけのネイルビューティーを作りませんか。</p>
                     <a class="get_btn" href="Javascript:void(0)" role="button"
                       >予約をとる</a
@@ -162,7 +162,7 @@
                   </div>
                   <div class="col-md-6">
                     <span>02/03</span>
-                    <h1>Milina ネイルサロンビューティー</h1>
+                    <h1>Neruネイルサロンビューティー</h1>
                     <p>簡単に美しく仕上がるネイルを手に入れる。</p>
                     <a class="get_btn" href="Javascript:void(0)" role="button"
                       >予約をとる</a
@@ -181,7 +181,7 @@
                   </div>
                   <div class="col-md-6">
                     <span>03/03</span>
-                    <h1>Milina ネイルサロンビューティー</h1>
+                    <h1>Neruネイルサロンビューティー</h1>
                     <p>スタイリッシュで安全な美しさを手に入れませんか。</p>
                     <a class="get_btn" href="Javascript:void(0)" role="button"
                       >予約をとる</a
@@ -488,11 +488,11 @@
             <div class="col-md-12">
               <ul class="conta">
                 <li>
-                  <i class="fa fa-map-marker" aria-hidden="true"></i>千葉中央区
+                  <i class="fa fa-map-marker" aria-hidden="true"></i>千葉県千葉市
                 </li>
                 <li>
                   <i class="fa fa-phone" aria-hidden="true"></i> Call :
-                  +012334567890
+                  043-356-0300
                 </li>
                 <li>
                   <i class="fa fa-envelope" aria-hidden="true"></i
@@ -547,8 +547,8 @@
             <div class="row">
               <div class="col-md-10 offset-md-1">
                 <p>
-                  © 2019 All Rights Reserved. Design by
-                  <a href="https://html.design/"> Free Html Templates</a>
+                  © 2023 All Rights Reserved. Design by
+                  <a href="https://smartgenz.com/"> SmartGenz</a>
                 </p>
               </div>
             </div>
