--- a/neru/about.html
+++ b/neru/about.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
     <!-- site metas -->
-    <title>milina</title>
+    <title>neru（ネル）</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
@@ -175,7 +175,7 @@
                 </li>
                 <li>
                   <i class="fa fa-phone" aria-hidden="true"></i> Call :
-                  +012334567890
+                  043-356-0300
                 </li>
                 <li>
                   <i class="fa fa-envelope" aria-hidden="true"></i
@@ -230,8 +230,8 @@
             <div class="row">
               <div class="col-md-10 offset-md-1">
                 <p>
-                  © 2019 All Rights Reserved. Design by
-                  <a href="https://html.design/"> Free Html Templates</a>
+                  © 2023 All Rights Reserved. Design by
+                  <a href="https://smartgenz.com/"> SmartGenz</a>
                 </p>
               </div>
             </div>
